# cvmath

./: .gitignore  Cargo.toml  cvmotion.wasm  index.html  license.txt  readme.md
.github/workflows/: check.yml  ci.yml
benches/: trace2.rs
examples/: debug_visualizer.rs  mandelbrot.rs  raytracer.rs  raytracing.rs  svgdoc.rs
examples/pathtracing/: main.rs  readme.md  scenes.rs
examples/pathtracing/scenes/: lowpoly_tree.rs
examples/rays2d/: main.rs  readme.md
examples/raytracing/: main.rs  readme.md  scenes.rs
examples/raytracing/scenes/: dto.rs  raytracer.json  (+3 more)
examples/scenes/: dto.rs  mod.rs  raytracer.json  raytracer.ron  raytracing.json  raytracing.ron
examples/svg/: mod.rs
examples/svgdoc/: main.rs  readme.md  writer.rs
examples/wireframe/: main.rs
src/: angle.rs  bools.rs  bounds.rs  complex.rs  csg.rs  euler.rs  interval.rs  lerp.rs  lib.rs  line.rs  line2.rs  macros.rs  mask.rs  num.rs  packed.rs  plane.rs  point.rs  polar.rs  poly.rs  qangle.rs  quat.rs  quaternion.rs  ray.rs  rect.rs  rect_box.rs  rotvec.rs  scalar.rs  shape.rs  sphere.rs  triangle.rs  unit.rs  vec.rs
src/affine/: affine2.rs
src/mat/: affine2.rs  affine3.rs  macros.rs  mat2.rs  mat3.rs  mat4.rs  mod.rs  parse.rs  print.rs  transform.rs  transform2.rs  transform3.rs
src/math/: cross.rs  distance.rs  dot.rs  lerp.rs  mod.rs  scalar.rs
src/natvis/: Angle.natvis  Complex.natvis  Mat2.natvis  Mat3.natvis  Mat4.natvis  Polar.natvis  Quat.natvis  RotationVector.natvis  Transform2.natvis  Transform3.natvis  Vec2.natvis  Vec3.natvis  Vec4.natvis
src/num/: abs.rs  as_cast.rs  cast.rs  extrema.rs  fast_math.rs  float_ops.rs  mod.rs  one.rs  spatial_ord.rs  zero.rs
src/shape2/: bounds.rs  bvh.rs  capsule.rs  circle.rs  line.rs  mod.rs  plane.rs  point.rs  ray.rs  rect.rs  shape.rs  triangle.rs  union.rs
src/shape3/: bounds.rs  bvh.rs  capsule.rs  intersect.rs  line.rs  mod.rs  plane.rs  point.rs  ray.rs  shape.rs  sphere.rs  triangle.rs
src/tests/: mod.rs  plane.rs  serde.rs  sphere.rs  triangle.rs
tests/: cut.rs  traceray.rs
(+21 files in other folders)
