[package]
name = "cvmath"
version = "0.0.1"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"

description = "Computer Vector Graphics Math Library"

# documentation =
# homepage =
repository = "https://github.com/CasualX/cgmath"

readme = "readme.md"

keywords = ["cg", "cgmath", "matrix"]

license = "MIT"

[dependencies]
dataview = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []

qangle = []
