[package]
name = "cvmath"
version = "0.0.3"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"

description = "Computer Graphics Vector Math Library"

# documentation =
# homepage =
repository = "https://github.com/CasualX/cvmath"

readme = "readme.md"

keywords = ["cg", "cgmath", "matrix"]

license = "MIT"

[dependencies]
dataview = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []

[dev-dependencies]
urandom = "0.2"
rayon = "1.10"
