[package]
name = "cvmath"
version = "0.1.3"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2024"
rust-version = "1.85"

description = "Computer Graphics Vector Math Library"

documentation = "https://docs.rs/cvmath"
homepage = "https://github.com/CasualX/cvmath"
repository = "https://github.com/CasualX/cvmath"

readme = "readme.md"

keywords = ["cgmath", "math", "vector", "matrix", "geometry"]
categories = ["mathematics", "graphics", "game-development"]

license = "MIT"

# Enable debug symbols in release builds for perf traces
[profile.release]
debug = true

[dependencies]
dataview = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
urandom = { version = "0.2", optional = true }

[features]
default = []

[dev-dependencies]
urandom = "0.2"
rayon = "1.10"
serde_json = "1.0"
ron = "0.12"
